8205172: 32 bit build broken

Reviewed-by: roland, kvn, dholmes